--- a/WebApplicationASP.NETCoreWebAPI/WebApplicationASP.NETCoreWebAPI/Properties/launchSettings.json
+++ b/WebApplicationASP.NETCoreWebAPI/WebApplicationASP.NETCoreWebAPI/Properties/launchSettings.json
@@ -15,6 +15,8 @@
       "launchUrl": "weatherforecast",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
+          //,
+        //"cityInfoDBConnectionString": "Server=(localdb)\\MSSQLLocalDB;Database=CityInfoDB;Trusted_Connection=True"
       }
     },
     "WebApplicationASP.NETCoreWebAPI": {
