--- a/WebApplicationASP.NETCoreWebAPI/WebApplicationASP.NETCoreWebAPI/WebApplicationASP.NETCoreWebAPI.csproj
+++ b/WebApplicationASP.NETCoreWebAPI/WebApplicationASP.NETCoreWebAPI/WebApplicationASP.NETCoreWebAPI.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="EntityFramework" Version="6.4.4" />
     <PackageReference Include="Microsoft.AspNetCore.JsonPatch" Version="6.0.2" />
     <PackageReference Include="NLog.Web.AspNetCore" Version="4.14.0" />
   </ItemGroup>
